--- a/composer.json
+++ b/composer.json
@@ -3,5 +3,10 @@
     "description": "Twitter API",
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+	"psr-0":{
+	    "HdTwitter": "/src"
+	}
     }
 }
