--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,11 @@
         "php": ">=5.3.0"
     },
     "autoload": {
-	"psr-0":{
-	    "HdTwitter": "/src"
-	}
+        "psr-0": {
+            "HdTwitter": "src/"
+        },
+        "classmap": [
+            "./Module.php"
+        ]
     }
 }
