--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,27 @@
 {
-    "name": "hounddog/HdTwitter",
-    "description": "Twitter API",
+    "name": "hounddog/hd-twitter",
+    "description": "Twitter API for ZF2",
+    "type": "library",
+    "license": "MIT",
+    "keywords": [
+        "API",
+        "Twitter",
+        "zf2"
+    ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4"
     },
+    "minimum-stability": "dev",
+    "homepage": "http://hounddog.github.io/",
+    "authors": [
+        {
+            "name": "Martin Shwalbe",
+            "email": "martin.shwalbe@gmail.com"
+        }
+    ],
     "autoload": {
         "psr-0": {
-            "HdTwitter": "src/"
+            "hd-twitter": "src/"
         },
         "classmap": [
             "./Module.php"
