--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
  - composer install --dev --prefer-source
 
 script:
- - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./tests/ ./config/
+ - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./test/ ./config/
  - ./vendor/bin/phpunit -c tests --coverage-clover ./tests/coverage/clover.xml
 
 after_script:
