--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,21 @@
             "email": "martin.shwalbe@gmail.com"
         }
     ],
+    "require": {
+        "php": ">=5.4",
+        "hounddog/hd-api-client": "dev-master"
+    },
+    "require-dev": {
+        "phpunit/phpunit" : "3.7.*",
+        "squizlabs/php_codesniffer": "1.4.*"
+    },
     "autoload": {
-        "psr-0": {
-            "hd-twitter": "src/"
+        "psr-4": {
+            "HD\\Twitter\\": "src/",
+            "HDTest\\Twitter\\": "test/"
         },
         "classmap": [
-            "./Module.php"
+            "Module.php"
         ]
     }
 }
