--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
 
 script:
  - ./vendor/bin/phpcs --standard=PSR2 ./src/ ./test/ ./config/
- - ./vendor/bin/phpunit -c tests --coverage-clover ./tests/coverage/clover.xml
+ - ./vendor/bin/phpunit --coverage-clover ./test/coverage/clover.xml
 
 after_script:
  - wget https://scrutinizer-ci.com/ocular.phar
